# Interpreter

./: .appveyor.yml  .travis-c++14-old.yml  .travis.yml  CMakeLists.txt  README.md  googletest-download.CMakeLists.txt  index.js  package-lock.json  package.json  run-cmake.bat
src/: .clang-format  .clang-tidy  generateCMake.bat
src/core/: .clang-tidy  CMakeLists.txt  test.cpp  test.h
src/core/error/: CMakeLists.txt  Error.cpp  Error.h  InternalError.cpp  InternalError.h  RuntimeError.cpp  RuntimeError.h
src/core/programGraph/: Block.cpp  Block.h  CMakeLists.txt  Connection.cpp  Connection.h  Datatype.cpp  Datatype.h  ExpressionBlock.cpp  ExpressionBlock.h  ExpressionStatement.cpp  ExpressionStatement.h  Function.cpp  Function.h  FunctionBlock.cpp  FunctionBlock.h  GraphicalFunction.cpp  GraphicalFunction.h  IfStatement.cpp  IfStatement.h  ParameterAccessBlock.cpp  ParameterAccessBlock.h  PrimitiveFunction.cpp  PrimitiveFunction.h  Program.cpp  Program.h  ProgramFlowConnection.cpp  ProgramFlowConnection.h  ReturnBlock.cpp  ReturnBlock.h  StatementBlock.cpp  StatementBlock.h  Value.cpp  Value.h  ValueBlock.cpp  ValueBlock.h  VariableAccessBlock.cpp  VariableAccessBlock.h  VariableReadBlock.cpp  VariableReadBlock.h  VariableWriteBlock.cpp  (+3 more)
src/core/utility/: CMakeLists.txt  Literals.cpp  Literals.h
src/core/visitors/: CMakeLists.txt  DAGChecker.cpp  DAGChecker.h  Evaluator.cpp  Evaluator.h  Executor.cpp  Executor.h  RecursiveExecutor.cpp  RecursiveExecutor.h  SteppingExecutor.cpp  SteppingExecutor.h  TypeCheckResult.cpp  TypeCheckResult.h  TypeChecker.cpp  TypeChecker.h  Visitor.h
src/nan/: .clang-tidy  Adapter.cpp  CMakeLists.txt  Constants.h  JSProgram.cpp  JSProgram.h  JSProgramTranslator.cpp  JSProgramTranslator.h  TranslationError.cpp  TranslationError.h  Utilities.h
src/tests/: CMakeLists.txt  test1.cpp
src/tests/testProgramGraph/: CMakeLists.txt  MockFunction.h  TestBlock.cpp  TestConnection.cpp  TestDatatype.cpp  TestErrors.cpp  TestFunction.cpp  TestPrimitiveFunction.cpp  TestProgram.cpp  TestReturnBlock.cpp  TestStatement.cpp  TestVariableAccessBlock.cpp  TestVariableReadBlock.cpp  TestVariableWriteBlock.cpp  testValue.cpp
src/tests/testUtility/: CMakeLists.txt  CustomAssert.h
src/tests/testVisitors/: CMakeLists.txt  TestDAGChecker.cpp  TestEvaluator.cpp  TestExecutor.cpp  TestTypeChecker.cpp
